--- a/htdocs/mockup/res/css/backend-panel-style.css
+++ b/htdocs/mockup/res/css/backend-panel-style.css
@@ -41,4 +41,14 @@ td{
     width: 100%;
 }
 
-/* === MEDIAMODAL === */
+/* === SITEEDITOR === */
+.siteeditor-list-item{
+    margin-bottom: 1rem;
+    background-color: #f8f9fa;
+}
+
+.column-background{
+    padding: 1rem;
+    background-color: #f8f9fa;
+    text-align: center;
+}
