--- a/htdocs/mockup/res/css/backend-panel-style.css
+++ b/htdocs/mockup/res/css/backend-panel-style.css
@@ -45,10 +45,21 @@ td{
 .siteeditor-list-item{
     margin-bottom: 1rem;
     background-color: #f8f9fa;
+    list-style: none;
 }
 
 .column-background{
     padding: 1rem;
     background-color: #f8f9fa;
     text-align: center;
+}
+
+.mediaSelectionButton{
+    padding: 0 !important;
+    border: none;
+    margin-bottom: 1rem !important;
+}
+
+.mediaSelectionImage{
+    width: 100%;
 }
