Login Template Changes

--- a/htdocs/mockup/res/css/backend-panel-style.css
+++ b/htdocs/mockup/res/css/backend-panel-style.css
@@ -62,3 +62,15 @@ td{
 .mediaSelectionImage{
     width: 100%;
 }
+
+/* === LOGIN === */
+.login-container{
+    width: 450px;
+    margin: 4rem auto;
+}
+
+.login-logo{
+    width: 180px !important;
+    height: auto;
+    margin: 0 auto 2rem;
+}
