--- a/htdocs/mockup/res/css/backend-panel-style.css
+++ b/htdocs/mockup/res/css/backend-panel-style.css
@@ -80,6 +80,11 @@ td{
     }
 }
 
+.column-layout-icon{
+    width: 32px;
+    height: auto;
+}
+
 /* === LOGIN === */
 .login-container{
     width: 450px;
