--- a/htdocs/mockup/res/css/backend-panel-style.css
+++ b/htdocs/mockup/res/css/backend-panel-style.css
@@ -1,17 +1,25 @@
+/* === GLOBALS === */
+.content-container{
+    max-width: 1200px !important;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 4rem;
+}
+
 /* === USER === */
 .user-table-action-btn{
     width: 100%;
 }
 
 .user-table-desktop{
-    display:block;
+    display: block;
 }
 
 .user-table-mobile{
     display: none;
 }
 
-@media(max-width: 853px){
+@media(max-width: 865px){
     .user-table-desktop{
         display:none;
     }
@@ -43,6 +51,18 @@ td{
 
 /* === SITEEDITOR === */
 .siteeditor-list-item{
+    margin-bottom: 1rem;
+    background-color: #f8f9fa;
+    list-style: none;
+}
+
+.socialmedia-list-item{
+    margin-bottom: 1rem;
+    background-color: #f8f9fa;
+    list-style: none;
+}
+
+.slider-list-item{
     margin-bottom: 1rem;
     background-color: #f8f9fa;
     list-style: none;
