--- a/htdocs/mockup/res/css/backend-panel-style.css
+++ b/htdocs/mockup/res/css/backend-panel-style.css
@@ -6,6 +6,23 @@
     margin-bottom: 4rem;
 }
 
+label{
+    width: 100%;
+}
+
+.reset-button{
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    padding: 1px 0 0 0;
+    float: right;
+}
+
+input[type="color"]{
+    height: 38px;
+    padding: .2rem;;
+}
+
 /* === USER === */
 .user-table-action-btn{
     width: 100%;
@@ -90,6 +107,11 @@ td{
 
 .siteeditor-delete-button{
     border: none;
+    border-radius: 50%;
+    width: 38px;
+    height: 38px;
+    padding-top: 9px;
+    padding-left: 11px;
     margin-top: .2rem;
     float: right;
 }
