--- a/htdocs/mockup/res/css/backend-panel-style.css
+++ b/htdocs/mockup/res/css/backend-panel-style.css
@@ -138,3 +138,15 @@ td{
     height: auto;
     margin: 0 auto 2rem;
 }
+
+/* === HELP === */
+
+.help-content{
+    margin-top: 0;
+}
+
+@media(max-width: 991px){
+    .help-content{
+        margin-top: 2rem;
+    }
+}
