--- a/htdocs/mockup/res/css/navbar-style.css
+++ b/htdocs/mockup/res/css/navbar-style.css
@@ -4,7 +4,7 @@
 }
 #sidebar-container {
     min-height: 100vh;   
-    background-color: #333;
+    background-color: #201926;
     padding: 0;
 }
 
@@ -19,7 +19,7 @@
 /* Menu item*/
 #sidebar-container .list-group a {
     height: 50px;
-    color: white;
+    color: #FDF7FF;
 }
 
 /* Submenu item*/
@@ -33,15 +33,15 @@
 
 /* Separators */
 .sidebar-separator-title {
-    background-color: #333;
+    background-color: #201926;
     height: 35px;
 }
 .sidebar-separator {
-    background-color: #333;
+    background-color: #201926;
     height: 25px;
 }
 .logo-separator {
-    background-color: #333;    
+    background-color: #201926;    
     height: 60px;
 }
 
@@ -60,4 +60,25 @@
   display: inline;
   text-align: right;
   padding-left: 10px;
+}
+
+/* Navbar */
+.navbar, .bg-dark{
+    background-color: #241E2A !important;
+    color: #FDF7FF !important;
+}
+
+a.bg-dark:focus, 
+a.bg-dark:hover, 
+button.bg-dark:focus, 
+button.bg-dark:hover{
+    background-color: #37303C !important;
+}
+
+.sidebar-separator-title{
+    color: #7D7484 !important;
+}
+
+.dropdown-menu{
+    background-color: #FDF7FF !important;
 }
